# discordRust

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.dev.yml  docker-compose.yml  example.toml
.github/workflows/: main.yml
migrations/: 20250227000719_base.sql
src/: config.rs  db.rs  main.rs
